--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -26,10 +26,15 @@
 
 .md {
     border-radius: 8px;
-    padding: 1vh 1vw;
+    padding: 0.5vh 1vw;
 }
 
 .lg {
+    border-radius: 8px;
+    padding: 1vh 1vw;
+}
+
+.xl {
     border-radius: 16px;
-    padding: 2.5vh 2vw 0 2vw;
+    padding: 1vh 2vw;
 }
