--- a/src/components/InputField/styles.module.css
+++ b/src/components/InputField/styles.module.css
@@ -6,7 +6,7 @@
 
 .container input {
     min-width: 64px;
-    padding: 4px;
+    padding: 0.5vh 0.5vw;
     border: 2px solid var(--main-800);
     background-color: var(--secondary-orange-40);
 }
@@ -17,15 +17,19 @@
 }
 
 .sm {
-    margin-bottom: 4px;
+    margin-bottom: 0.5vh;
 }
 
 .md {
-    margin-bottom: 8px;
+    margin-bottom: 1vh;
 }
 
 .lg {
-    margin-bottom: 16px;
+    margin-bottom: 1vh;
+}
+
+.xl {
+    margin-bottom: 2vh;
 }
 
 .sm input {
@@ -33,10 +37,14 @@
 }
 
 .md input {
-    font-size: var(--h2);
+    font-size: var(--h4);
 }
 
 .lg input {
+    font-size: var(--h2);
+}
+
+.xl input {
     font-size: var(--h1);
 }
 
