--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,8 +4,15 @@
     /* Minimum font size */
     --baseFont: 12px;
     --p: calc(var(--baseFont) + 1vw);
-    --h2: calc(var(--baseFont) + 3vw);
+    --h4: calc(var(--baseFont) + 2vw);
+    --h3: calc(var(--baseFont) + 3vw);
+    --h2: calc(var(--baseFont) + 4vw);
     --h1: calc(var(--baseFont) + 6vw);
+
+    /* Screen sizes */
+    --mobile: 512px;
+    --laptop: 1028px;
+    --largeScreens: 2056px;
 
     /* Main Color Pallet with opacity */
     --main-800: #cc6d4d;
@@ -79,8 +86,8 @@
 
 body {
     background-image: url(../public/Bakerybg.jpg);
-    background-size: cover;
-    background-repeat: repeat-y;
+    background-size: contain;
+    background-repeat: repeat;
 }
 
 * {
@@ -89,7 +96,7 @@ body {
     margin: 0;
     font-family: "Salsa", cursive;
     -webkit-text-stroke-color: black;
-    -webkit-text-stroke-width: 0.1px;
+    -webkit-text-stroke-width: 1px;
 }
 
 h1 {
@@ -99,6 +106,16 @@ h1 {
 
 h2 {
     font-size: var(--h2);
+    color: var(--main-800);
+}
+
+h3 {
+    font-size: var(--h3);
+    color: var(--main-800);
+}
+
+h4 {
+    font-size: var(--h4);
     color: var(--main-800);
 }
 
