--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -20,6 +20,11 @@
     margin-bottom: 3vh;
 }
 
+.form p {
+    margin: 1vh 0;
+    color: red;
+}
+
 @media (max-width: 1028px) {
     .form {
         width: 65vw;
