--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@
     /* Minimum font size */
     --baseFont: 12px;
     --p: calc(var(--baseFont) + 1vw);
+    --h5: calc(var(--baseFont) + 1.5vw);
     --h4: calc(var(--baseFont) + 2vw);
     --h3: calc(var(--baseFont) + 3vw);
     --h2: calc(var(--baseFont) + 4vw);
@@ -119,7 +120,12 @@ h4 {
     color: var(--main-800);
 }
 
+h5 {
+    font-size: var(--h5);
+    color: var(--main-800);
+}
+
 p {
-    font-size: var(--baseFont);
+    font-size: var(--p);
     color: var(--main-800);
 }
