--- a/styles/AddCategory.module.css
+++ b/styles/AddCategory.module.css
@@ -1,3 +1,18 @@
 .container {
-    background-color: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1vh 1vw;
+    height: 100vh;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.form input[type="file"] {
+    display: none;
 }
