--- a/styles/AdminPanel.module.css
+++ b/styles/AdminPanel.module.css
@@ -10,7 +10,9 @@
 
 .container h1 {
     position: absolute;
-    top: 0;
+    top: 1vh;
+    text-align: center;
+    z-index: var(--backLayer);
 }
 
 .panel {
